Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
    <h1>Olá Mundo</h1> 
    <hr>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis, consequuntur iusto dolor laboriosam officiis minus sunt exercitationem, eaque rerum vero! Voluptatem at cumque, quia blanditiis rem aspernatur sapiente error!</p>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias rem minima at? Suscipit nostrum, dolores cum nulla illo magni consectetur deleniti aspernatur, unde maiores aliquam. Laborum iure voluptate iste aspernatur.</p>
 </body>
 </html>
